Correction du username github

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     },
     "authors": [
         {
-            "name": "onestsurgithubouuu",
+            "name": "SekmenAhmet",
             "email": "sekmenahmet04@gmail.com"
         }
     ],
